ver. 1.3 icons update zigzag z-index fix

--- a/sections/projects-lud/style.less
+++ b/sections/projects-lud/style.less
@@ -362,7 +362,7 @@
 		opacity: .8;
 		width: 100%;
 		height: 81px;
-		z-index: 99999;
+		z-index: 999;
 		bottom: 0;
 		left: 0;
 		opacity: 0; .transition(opacity .2s linear);
